# cppcicd

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  g_test_version.cpp  lib.cpp  main.cpp  test_version.cpp
